[gd_scene load_steps=12 format=3 uid="uid://bi8c5e1k7qi8r"]

[ext_resource type="Script" uid="uid://b214ub7m2aky5" path="res://scripts/crab.gd" id="1_2b8bq"]
[ext_resource type="Texture2D" uid="uid://cgq5s40lv3v3e" path="res://assets/enemies/crab.png" id="2_rq6vx"]
[ext_resource type="AudioStream" uid="uid://b2tecjrqk0bcq" path="res://assets/walk_leaf.wav" id="3_rq6vx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_83q5x"]
atlas = ExtResource("2_rq6vx")
region = Rect2(0, 0, 240, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rftv6"]
atlas = ExtResource("2_rq6vx")
region = Rect2(240, 0, 240, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_hj1h3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83q5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rftv6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ow7wl"]
radius = 113.018

[sub_resource type="CircleShape2D" id="CircleShape2D_2b8bq"]
radius = 466.429

[sub_resource type="Animation" id="Animation_83q5x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rftv6"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.103766, 0.203954, 0.30593),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hj1h3"]
_data = {
&"RESET": SubResource("Animation_83q5x"),
&"Walk": SubResource("Animation_rftv6")
}

[node name="Crab" type="CharacterBody2D"]
collision_layer = 19
collision_mask = 19
input_pickable = true
motion_mode = 1
floor_stop_on_slope = false
floor_block_on_wall = false
platform_floor_layers = 4294967294
script = ExtResource("1_2b8bq")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_hj1h3")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ow7wl")

[node name="agro_zone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="agro_zone"]
shape = SubResource("CircleShape2D_2b8bq")

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-62, 0)
target_position = Vector2(-40, 0)

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(65, 0)
target_position = Vector2(40, 0)

[node name="dmg_cooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hj1h3")
}

[node name="Walk_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rq6vx")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="agro_zone" to="." method="_on_agro_zone_body_entered"]
[connection signal="body_exited" from="agro_zone" to="." method="_on_agro_zone_body_exited"]
[connection signal="timeout" from="dmg_cooldown" to="." method="_on_dmg_cooldown_timeout"]
